...
    android:layout_height="wrap_content"
    android:background="#A3FFFFFF"
    android:orientation="vertical"
    android:id="@+id/row">

    <androidx.cardview.widget.CardView
        android:id="@+id/groceries_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#9EFFFFFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/groceries_row_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#83FFFFFF"
            android:padding="10dp"
            android:visibility="visible"
            tools:visibility="visible">
...
                android:includeFontPadding="false"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:textColorLink="#1ABFB0"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/total_price"
                app:layout_constraintStart_toEndOf="@+id/checkBox" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
...
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/currency2"
                app:layout_constraintStart_toEndOf="@+id/currency2"
                app:layout_constraintTop_toBottomOf="@+id/quantity" />

            <ImageButton
                android:id="@+id/edit_grocery"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/white"
...
